Deployment-fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment-for-alb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-for-alb
  template:
    metadata:
      name: fastapi-for-alb-connection
      labels:
        app: fastapi-for-alb
    spec:
      containers:
      - name: fastapi-container
        image: 816040392320.dkr.ecr.ap-northeast-2.amazonaws.com/jimmy-fastapi:1
        ports:
          - containerPort: 8000
