Service-fastapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-for-alb
spec:
  selector:
    app: fastapi-for-alb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
        #type: LoadBalancer
  type: ClusterIP
